[package]
name = "df"
version = "0.1.0"
authors = ["Alex Angelini <alex.louis.angelini@gmail.com>"]

[dependencies]
clippy = "*"
csv = "1.0.0-beta.5"
decorum = "0.0.8"
downcast-rs = "1.0.0"
futures = "0.1.17"
futures-cpupool = "0.1.8"
lazy_static = "1.0"
hyper = "0.11.17"
rand = "0.4.2"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
tempdir = "0.3"
time = "0.1"
